project/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab4-app
  labels:
    name: lab4-app
